--- a/group 3/main.css
+++ b/group 3/main.css
@@ -17,35 +17,43 @@ vertical-align: middle;
    
  
 }
-
+.top-bar p{
+    margin-right: 60px;
+    
+}
 .top-bar ul {
     list-style: none;
     display: inline-block;
     margin-right: 20px;
     text-align:center;
-    
     padding: 0;
 }
 
 .top-bar ul li {
     display: inline-block;
     margin-right: 20px;
-    
-   
+    top:auto;
+    padding-left: 20px;
 }
-
+.top-bar ul li a:hover {
+    color: #007bff;
+}
 .top-bar ul li:last-child {
     margin-right: 0;
 }
-
+.top-bar ul li:nth-child(1) {
+    margin-right: 200px;
+}
 .top-bar ul li:first-child {
     margin-left: 15px;
 }
-.top-bar a{
+.top-bar ul li a{
+
     color: black;
     text-decoration: none;
     font-size: larger;
     position: relative;
+    transition: 0.3 ease;
     
 }
 .top-bar a::after{
@@ -73,7 +81,8 @@ vertical-align: middle;
     border-style: groove;
 }
 .srch-bx {
-    position: relative;
+    margin-top: 10px;
+    position: absolute;
     display: inline-block;
 }
 .srch-bx input:focus {
@@ -91,6 +100,7 @@ vertical-align: middle;
 .sch{
    width: 18px;
    margin-top: 5px;
+   
 }
 .srch {
     padding-right: 30px; 
@@ -114,6 +124,7 @@ vertical-align: middle;
   
 }
 .ham {
+    margin-top: 13px;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -159,18 +170,34 @@ vertical-align: middle;
     margin: 0;
 }
 
-.sidebar li {
-    width: 200px;
-    
-    margin: 15px 10px;
+.sidebar  li {
+    width: 200px; 
+    margin-top: 5px;
+    padding-top: 5px;
     padding-bottom: 5px;
     text-decoration: none;
-    list-style: none;
-   
+    list-style:none;
+    align-items: flex-start;
     border-bottom: 1px solid black; 
     box-sizing: border-box; 
     
     
+}
+.sidebar ul li{
+    margin: 10px 15px;
+    display: block;
+}
+.sidebar ul li:nth-child(2){
+    padding-left: 5px;
+}
+.sidebar ul li:nth-child(3){
+    padding-left: 30px;
+}
+.sidebar ul li:nth-child(4){
+    padding-left: 2px;
+}
+.sidebar ul li:nth-child(5){
+    padding-left: 35px;
 }
 
 .sidebar a {
@@ -179,12 +206,12 @@ vertical-align: middle;
     color: black;
     justify-content: center;
     text-decoration: none;
+    text-align: center;
+    display: block;
     font-size: larger;
-   
-    
-    
     
 }
+
 .sidebar li:first-child{
     margin-top: 65px;
 }
@@ -211,8 +238,8 @@ vertical-align: middle;
     margin: 0 auto;
     box-sizing: border-box;
     position: relative;
-    width: 400px;
-    height: 400px;
+    width: 380px;
+    height: 380px;
     background-color: rgba(255,255,255,0.5);
     border: 1px solid rgba(255,255,255,0.2);
     backdrop-filter: blur(20px);
@@ -226,7 +253,8 @@ vertical-align: middle;
 h1{
    text-align: center;
    margin-top: 10px;
-   margin-bottom: 40px;
+   margin-bottom: 10px;
+   position: relative;
 }
 .input-box{
     display: flex;
@@ -236,7 +264,7 @@ h1{
 }
 .input-box input
  {padding-left: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
     width: 300px;
     height: 40px ;
     color: black;
@@ -244,7 +272,7 @@ h1{
 border-bottom: 1px solid black;
 background-color: transparent;}
 .Remember{
-    margin-top: 20px;
+    margin-top: 5px;
     margin-bottom: 10px;
     margin-right: 10px;
      
@@ -298,7 +326,7 @@ a:hover{
 .container2{
     margin: 0 auto;
     position: absolute;
-    width: 450px;
+    width: 420px;
     height: 570px;
     box-sizing: border-box;
     background-color: rgba(255,255,255,0.5);
@@ -315,11 +343,13 @@ a:hover{
     display: flex;
     flex-direction: column;
     padding-left: 0px;
+    margin-bottom: 0px;
 }
 .input-box2 input{
     margin-left: 5px;
     padding-left: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
+    margin-top: 0px;
     width: 300px;
     height: 30px ;
  border-style: none;
@@ -342,6 +372,7 @@ select{
     margin-left: 25px;
     width: 170px;
     font-weight: bolder;
+    margin: 0px;
     border-bottom: 1px solid black;
 }
 
@@ -352,7 +383,10 @@ select:focus{
     margin-left: 5px;
    
 }
-.country{ margin-bottom: 10px;}
+.country{
+     margin-bottom: 10px;
+     margin-top: 10px;
+}
 
 .btn2{
     background-color: black;
@@ -375,18 +409,33 @@ select:focus{
 }
 .images img{
     width: 100%;
-    height:25%;
+    height: 600px;;
+}
+.btn01{
+    background-color: black;
+    color: white;
+    height: 35px;
+    width: 100px;
+    border-radius: 45px;
+    border-style:hidden ;
+    cursor: pointer;
+    font-size: 18px;
+}
+.btn01:hover{
+    background-color: white;
+    color: black;
+    font-size: 18px;
+    transition: 1s;
 }
 .text{
     position: absolute;
-    top: 25%;
-    left: 10%;
-    width: 840px;
+    top: 40%;
+    left: 5%;
+    width: 670px;
+    display: block;
     transform: translate(-100%);
-    padding: 20px;
-    font-size: 75px;
+    font-size: 40px;
     color: rgba(000);
-    padding: 20px 50px;
     animation: slide-in 8s forwards;
     opacity: 0;
 }
@@ -461,10 +510,10 @@ h4{
     border-bottom: 1px solid black;
     background-color: transparent;
  }
- .input-box3 input::placeholder{
+.input-box3 input::placeholder{
     color: black;
  }
- .input-box3 input:focus{
+.input-box3 input:focus{
     outline: none;
  }
 #fgt{
@@ -530,9 +579,10 @@ h4{
     margin-left: 90px;
     height: 350px;
     width: 250px;
-    border: 1px solid black;
-    border-radius: 15px;
-    background-color: beige;
+    border: 1px solid #d1d8e0;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    border-radius: 8px;
+    background-color:#f1f2f6;
     }
     .items img{
     margin-top: 25px;
@@ -553,7 +603,7 @@ h4{
     
     .btn3{
       
-      background-color: black;
+      background-color:coral;
       color: white;
       padding: 5px 20px;
       border-radius: 40px;
@@ -574,35 +624,399 @@ h4{
          width: 30px;
          margin-left: 10px;
          border-radius: 10px;
+        .items {
+            margin-top: 80px;
+            margin-left: 90px;
+            height: 350px;
+            width: 250px;
+            border: 1px solid black;
+            border-radius: 15px;
+            background-color: beige;
+        }
+
+        .items img {
+            margin-top: 25px;
+            margin-left: 24px;
+            border-radius: 12px;
+            height: 180px;
+            width: 200px;
+        }
+
+        .Price-description {
+            display: flex;
+            margin-bottom: 5px;
+        }
+
+        .Price {
+            margin-left: 40px;
+        }
+
+        .btn3 {
+            background-color: coral;
+            color: white;
+            padding: 5px 20px;
+            border-radius: 40px;
+            border-style: hidden;
+            margin-left: 56px;
+            cursor: pointer;
+            margin-top: 8px;
+        }
          border: 1px solid black;
     }
     #quantity-label{
         margin-left: 48px;
     }
-    .categories{
+    .categories {
         margin-top: 80px;
         width: 100%;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(500px, 1fr)); 
+        gap: 10px; 
     }
-    .categories-items{
-
-        margin: 20px 30px;
+    
+    .categories-items {
+        position: relative;
+       margin-left: 60px;
         border-radius: 20px;
-        width: 600px;
-        height: 300px;
-        
+        width: 550px;
+        height: 300px; 
+        overflow: hidden;
     }
-    .categories-items img{
-        width: 600px;
-        height: 300px;
+    
+.categories-items img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover; 
         border-radius: 20px;
     }
-    #categories-description{
+    
+#categories-description {
         font-size: 3rem;
         margin-top: 10px;
         position: absolute;
-        
     }
+    
+.recommend {
+        width: 100%;
+        height: 400px;
+        background-color: beige;
+    }
+    
+.recommend p {
+        font-size: 3rem;
+}
+    
+.error{
+    color: rgb(255, 0, 0);
+    font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 3px; 
+    padding-left: 7px;
+    border-style: none ;
+    font-size: smaller;
+    height: 15px;
+}
+footer {
+    background-color: #f4f4f4;
+    padding: 20px 0;
+    height: 100px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+}
+
+footer div {
+    padding: 0 0px;
+    border-right: solid 1px #ccc;
+}
+
+footer div:last-child {
+    border-right: none;
+   
+}
+footer div:nth-child(4) {
+   width: 290px;
+   
+}
+
+footer div h6 {
+    font-size: 24px;
+    font-weight: bold;
+    color: #333;
+    margin-bottom: 10px;
+}
+
+footer div p {
+    font-size: 16px;
+    line-height: 1.5;
+    color: #666;
+}
+
+footer div ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+footer div ul li {
+    font-size: 18px;
+    margin-bottom: 8px;
+}
+
+footer div ul li a {
+    text-decoration: none;
+    color: #007bff;
+    transition: color 0.3s ease;
+}
+
+footer div ul li a:hover {
+    color: #0056b3;
+}
+
+footer div ul span p {
+    font-size: 18px;
+    color: #666;
+    margin-bottom: 5px;
+}
+
+footer div ul li box-icon {
+    margin-right: 10px;
+    font-size: 5px;
+    color: #333;
+}
+
+footer .rights {
+    align-items: center;
+    display: flex;
+    margin: 20px auto;
+    text-align: center;
+    color: #666;
+    font-size: 14px;
+}
+
+footer .rights box-icon {
+   
+    margin-right: 5px;
+   margin-bottom: 3px;
+    color: #666;
+}
+
+ .cart ul{
+    list-style:none ;
+    display: flex;
+    color: grey;
+    font-size: larger;
+    padding-top: 80px;
+    margin-bottom: 0;
+ }
+ .cart ul li:first-child{
+    display: flex;
+    margin-right: 400px;
+ }
+ .cart ul li:first-child input{
+    margin-top: 20px;
+    height: 15px;
+    width: 23px;
+    color:black;
+    font-weight: bolder;
+    padding-left: 20px;
+    background-color:coral ;
+    border-style:none ;
+ }
+ .cart ul li:last-child{
+    margin-left: 250px;
+ }
+ .cart ul li input{
+    border: solid 2px black;
+    border-radius: 10px;
+    width: 50px;
+    margin-left: 45px;
+    padding: 5px 10px;
+   
+}
+ .cart-pricing input{
+    border:none;
+ }
+ .cart-pricing input::placeholder{
+    color: black;
+ }
+ .check-out{
+    background-color: coral;
+    color: white;
+    padding: 8px 15px;
+    border-radius: 40px;
+    border-style: hidden;
+    margin-left: 56px;
+    font-size: 15px;
+    cursor: pointer;
+    margin-top: 10px;
+    margin-left: 40%;
+ }
+ .cart-items{
+    display: flex;
+    padding-bottom: 10px;
+    border-bottom:solid 2px #d1d8e0;
+  
+ }
+ .cart-items label{
+    margin-top: 30px;
+ }
+ .cart-items label:nth-of-type(1)
+ {
+    margin-left: 60px;
+ }
+ .cart-items label:nth-of-type(2)
+ {
+    margin-left: 390px;
+ }
+ 
+ .cart-items input{
+    border: solid 2px black;
+    border-radius: 15px;
+    height: 20px;
+    width: 60px;
+    margin-left: 260px;
+    margin-top:27px;
+}
+.cart-items input::placeholder{
+ padding-left: 20px;
+}
+ .cart-items img{
+    height: 80px;
+    width: 100px;
+    margin-left: 40px;
+}
+.cart-pricing{
+    margin-left:30% ;
+    margin-top: 10px;
+}
+h5{
+    color: black;
+    font-weight: bold;
+    font-size: 45px;
+    margin-top: auto;
+    margin-bottom: 0%;
+    text-align: center;
+    justify-content: center;
+}
+.featured-products{
+    background-color:whitesmoke;
+}
+.featured-products span p {
+    font-size: 23px;
+     color:rgba(128, 128, 128, 0.486);
+     text-align: center;
+     justify-content: center;
+     margin-left: 20px;
+     margin-top: 0%;
+
+}
+#Follow{
+    display:flex;
+   margin-left: 40px;
+}
+.contact{
+    height: 300px;
+    margin-top:100px;
+    display: flex;
+    background-color: #ccc;
+    gap: 50px;
+}
+.message{
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 60px 80px;
+   
+}
+.message input{
+    
+    border-radius: 30px;
+    padding: 8px 50px;
+    width: 300px;
+    margin-bottom: 10px;
+    border-style:none;
+    background-color: #12d3b9;
+}
+.message input:last-of-type{
+    padding-bottom: 90px;
+    border-radius: 15px;
+}
+.message input:focus{
+    outline:none ;
+}
+.message button{
+    background-color: coral;
+    color: white;
+    padding: 8px 15px;
+    border-radius: 40px;
+    border-style: hidden;
+  
+    font-size: 15px;
+    cursor: pointer;
+    margin-top: 10px;
+ 
+}
+.News{
+ 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding:20px 60px;
+}
+.News input{
+    margin-bottom: 10px;
+    border-style: none;
+    background-color: rgb(62, 255, 255);
+    border-radius: 13px;
+   padding:8px 30px;
+}
+.News  input:focus{
+    outline:none ;
+}
+.News button{
+    background-color: coral;
+    color: white;
+    padding: 8px 18px;
+    border-radius: 40px;
+    border-style: hidden;
+    font-size: 15px;
+    cursor: pointer;
+    margin-top: 10px;
+}
+ .News h6{
+    font-size: 24px;
+    margin-bottom: 0;
+    margin-left: -65px;
+    margin-top: 10px;
+}
+.contact-cards {
+    margin-top: 20px;
+    display: flex;
+    gap:70px;
+}
+.contact-cards div{
+    height: 200px;
+    width: 365px;
+    border-radius: 30px;
+    border-style: groove;
+}
+.contact-cards div:first-of-type{
+    margin-left: 120px;
+}
+.contact-cards div:last-of-type{
+    margin-right: 120px;
+}
+.contact-cards div h6{
+   margin-top: 50px;
+   display: flex;
+   align-items:center ;
+   justify-content: center;
+   font-size: 20px;
+}
+.contact-cards div p{
+margin-left: 20px;
+position: relative;
+}
