--- a/group 3/main.css
+++ b/group 3/main.css
@@ -742,7 +742,8 @@ footer div h6 {
     font-size: 24px;
     font-weight: bold;
     color: #333;
-    margin-bottom: 10px;
+    margin-bottom: 60px;
+    margin-top: 8px;
 }
 
 footer div p {
@@ -784,16 +785,18 @@ footer div ul li box-icon {
     color: #333;
 }
 
-footer .rights {
+.rights {
+    justify-content: center;
+    margin-top: 140px;
+    width: 100%;
     align-items: center;
     display: flex;
-    margin: 20px auto;
     text-align: center;
     color: #666;
     font-size: 14px;
 }
 
-footer .rights box-icon {
+.rights box-icon {
    
     margin-right: 5px;
    margin-bottom: 3px;
@@ -1019,4 +1022,8 @@ h5{
 .contact-cards div p{
 margin-left: 20px;
 position: relative;
+}
+.map{
+  margin-left: 190px;
+  margin-top: 35px;
 }
