--- a/group 3/main.css
+++ b/group 3/main.css
@@ -1120,3 +1120,20 @@ position: relative;
         padding: 8px 16px;
     }
 }
+#product-details{
+    margin:100px;
+    justify-content: center;
+    align-items:center;
+    display: flex;
+    flex-direction:column;
+}
+#product-image{
+    border-radius: 200px;
+    height:300px;
+    width:400px;
+    -webkit-border-radius: 200px;
+    -moz-border-radius: 200px;
+    -ms-border-radius: 200px;
+    -o-border-radius: 200px;
+}
+
